// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reference > crossSerialize > crossSerialize > supports Reference 1`] = `"($R=>$R[0]=__SEROVAL_REFS__.get("example"))($R["example"])"`;

exports[`Reference > crossSerialize > supports Reference 1`] = `"$R[0]=__SEROVAL_REFS__.get("example")"`;

exports[`Reference > crossSerializeAsync > scoped > supports Reference 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=__SEROVAL_REFS__.get("example")))($R["example"])"`;

exports[`Reference > crossSerializeAsync > supports Reference 1`] = `"$R[0]=Promise.resolve($R[1]=__SEROVAL_REFS__.get("example"))"`;

exports[`Reference > crossSerializeStream > scoped > supports Reference 1`] = `
"($R=>$R[0]=($R[2]=(resolver) => {
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver.p;
})($R[1]={p:0,s:0,f:0}))($R["example"])"
`;

exports[`Reference > crossSerializeStream > scoped > supports Reference 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=__SEROVAL_REFS__.get("example")))($R["example"])"
`;

exports[`Reference > crossSerializeStream > supports Reference 1`] = `
"$R[0]=($R[2]=(resolver) => {
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver.p;
})($R[1]={p:0,s:0,f:0})"
`;

exports[`Reference > crossSerializeStream > supports Reference 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=__SEROVAL_REFS__.get("example"))"
`;

exports[`Reference > serialize > supports Reference 1`] = `"__SEROVAL_REFS__.get("example")"`;

exports[`Reference > serializeAsync > supports Reference 1`] = `"Promise.resolve(__SEROVAL_REFS__.get("example"))"`;

exports[`Reference > toCrossJSON > supports Reference 1`] = `"{"t":18,"i":0,"s":"example"}"`;

exports[`Reference > toCrossJSONAsync > supports Reference 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":18,"i":1,"s":"example"}}"`;

exports[`Reference > toCrossJSONStream > supports Reference 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`Reference > toCrossJSONStream > supports Reference 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":18,"i":3,"s":"example"}]}"`;

exports[`Reference > toJSON > supports Reference 1`] = `"{"t":{"t":18,"i":0,"s":"example"},"f":31,"m":[]}"`;

exports[`Reference > toJSONAsync > supports Reference 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":18,"i":1,"s":"example"}},"f":31,"m":[]}"`;
